refactor(Room): Refactorizacion de codigo en Roomservice porque el codigo era redundante y desordenado