@@ -7,6 +7,7 @@ import com.coworking.model.Room;
 import com.coworking.repository.ReservationRepository;
 import com.coworking.repository.RoomRepository;
 import lombok.AllArgsConstructor;
+import lombok.RequiredArgsConstructor;
 import org.springframework.data.domain.Sort;
 import org.springframework.stereotype.Service;
 import org.springframework.web.multipart.MultipartFile;
@@ -22,23 +23,13 @@ import java.util.Set;
 import java.util.stream.Collectors;
 
 @Service
-@AllArgsConstructor
+@RequiredArgsConstructor
 public class RoomService {
 
     private final RoomRepository roomRepository;
     private final ReservationRepository reservationRepository;
     private final FileStorageService fileStorageService;
-
-    private RoomAvailabilityResponse mapToAvailability(Room room) {
-        RoomAvailabilityResponse r = new RoomAvailabilityResponse();
-        r.setId(room.getId());
-        r.setName(room.getName());
-        r.setCapacity(room.getCapacity());
-        r.setLocation(room.getLocation());
-        r.setImageUrl(room.getImageUrl());
-        r.setAvailable(room.isAvailable());
-        return r;
-    }
+    // MAPPERS
 
     private RoomDto mapToDto(Room room){
         RoomDto dto = new RoomDto();
@@ -68,89 +59,105 @@ public class RoomService {
         return room;
     }
 
-    //Obtener todas las salas
+    private RoomAvailabilityResponse mapToAvailability(Room room, boolean available){
+
+        RoomAvailabilityResponse dto = new RoomAvailabilityResponse();
+
+        dto.setId(room.getId());
+        dto.setName(room.getName());
+        dto.setCapacity(room.getCapacity());
+        dto.setPrice(room.getPrice());
+        dto.setLocation(room.getLocation());
+        dto.setImageUrl(room.getImageUrl());
+        dto.setAvailable(available);
+
+        return dto;
+    }
+
+    // CRUD ROOMS
+
     public List<RoomDto> getAllRooms(){
-        return roomRepository.findAll(Sort.by(Sort.Direction.ASC, "capacity"))
+
+        return roomRepository
+                .findAll(Sort.by(Sort.Direction.ASC,"capacity"))
                 .stream()
                 .map(this::mapToDto)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     public Optional<RoomDto> getRoomById(Long id){
-        return roomRepository.findById(id).map(this::mapToDto);
+
+        return roomRepository
+                .findById(id)
+                .map(this::mapToDto);
     }
 
     public RoomDto createRoom(RoomDto dto, MultipartFile image){
+
         Room room = mapToEntity(dto);
 
-        if (image != null && !image.isEmpty()){
+        if(image != null && !image.isEmpty()){
             String imageUrl = fileStorageService.storeFile(image);
             room.setImageUrl(imageUrl);
         }
 
-        Room saved = roomRepository.save(room);
-        return mapToDto(saved);
+        return mapToDto(roomRepository.save(room));
     }
 
-    //actualizar salas
     public Optional<RoomDto> updateRoom(Long id, RoomDto dto){
-        return roomRepository.findById(id).map(existing -> {
-            existing.setName(dto.getName());
-            existing.setDescription(dto.getDescription());
-            existing.setCapacity(dto.getCapacity());
-            existing.setAvailable(dto.isAvailable());
-            existing.setPrice(dto.getPrice());
-            existing.setImageUrl(dto.getImageUrl());
-            existing.setLocation(dto.getLocation());
-            existing.setFeatures(dto.getFeatures());
-            return mapToDto(roomRepository.save(existing));
+
+        return roomRepository.findById(id).map(room -> {
+
+            room.setName(dto.getName());
+            room.setDescription(dto.getDescription());
+            room.setCapacity(dto.getCapacity());
+            room.setAvailable(dto.isAvailable());
+            room.setPrice(dto.getPrice());
+            room.setImageUrl(dto.getImageUrl());
+            room.setLocation(dto.getLocation());
+            room.setFeatures(dto.getFeatures());
+
+            return mapToDto(roomRepository.save(room));
         });
     }
 
-    //Eliminar
     public boolean deleteRoom(Long id){
-        if (!roomRepository.existsById(id)) return false;
+
+        if(!roomRepository.existsById(id)) return false;
+
         roomRepository.deleteById(id);
         return true;
     }
 
-    // filtrar salas disponibles
-    public List<RoomAvailabilityResponse> findAvailableRooms(
-            LocalDate date,
-            LocalTime start,
-            LocalTime end,
+    // ROOM AVAILABILITY
+
+    public List<RoomAvailabilityResponse> getRoomsAvailability(
+            LocalDateTime start,
+            LocalDateTime end,
             Integer people
     ){
-        LocalDateTime startDT = LocalDateTime.of(date, start);
-        LocalDateTime endDT = LocalDateTime.of(date, end);
 
-        // salas ordenadas por capacity desde DB
-        List<Room> rooms = roomRepository.findByCapacityGreaterThanEqualOrderByCapacityAsc(people);
+        List<Room> rooms =
+                roomRepository.findByCapacityOrderByCapacityAsc(people);
 
-        if (people == 1) {
-           return rooms.stream()
-                    .filter(r -> r.getCapacity() == 1)
-                   .map(this::mapToAvailability)
-                    .collect(Collectors.toList());
-        }
+        List<Reservation> overlapping =
+                reservationRepository
+                        .findByStartAtLessThanAndEndAtGreaterThan(end,start);
 
-        // Buscar TODAS las reservas que se crucen con el rango pedido
-        List<Reservation> overlappingReservations =
-                reservationRepository.findByStartAtLessThanAndEndAtGreaterThan(endDT, startDT);
+        Set<Long> busyRoomIds =
+                overlapping.stream()
+                        .map(r -> r.getRoom().getId())
+                        .collect(Collectors.toSet());
 
-        // Obtener IDs de salas ocupadas
-        Set<Long> busyRoomIds = overlappingReservations.stream()
-                .map(r -> r.getRoom().getId())
-                .collect(Collectors.toSet());
+        return rooms.stream()
+                .map(room -> {
 
-        // Filtrar soo las disponibles (Ya vienen ordenadas)
-        List<Room> availableRooms = rooms.stream()
-                .filter(room -> !busyRoomIds.contains(room.getId()))
+                    boolean available = !busyRoomIds.contains(room.getId());
+
+                    return mapToAvailability(room, available);
+
+                })
                 .toList();
-
-        return availableRooms.stream()
-                .map(this::mapToAvailability)
-                .collect(Collectors.toList());
     }
-}
 
+}
